boiler - fixed width collapsing with position fixed

--- a/css/boiler.sass
+++ b/css/boiler.sass
@@ -27,3 +27,7 @@ button
     outline-style: none !important
     transform: scale(1.15)
     zoom: 1.15
+main,
+.main
+    & > *
+      width: 100%
